fix: switch from lodash-es to lodash
We often use the tool together with "esm", which is broken with latest
lodash-es. The last working version of lodash-es has security vulnerabilities,
so for the moment we simply switch over to lodash.

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "packages/*"
   ],
   "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/preset-env": "^7.6.3",
+    "@babel/core": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
     "eslint": "^6.5.1",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.4.0",
@@ -17,11 +17,11 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-promise": "^4.2.1",
     "husky": "^3.0.9",
-    "jest": "^24.9.0",
-    "jest-watch-typeahead": "^0.4.0",
+    "jest": "^28.1.3",
+    "jest-watch-typeahead": "^2.0.0",
     "lerna": "^3.18.1",
     "lint-staged": "^9.4.2",
-    "lodash-es": "4.17.15",
+    "lodash": "^4.17.21",
     "prettier": "^1.17.0",
     "pretty-quick": "^2.0.0"
   },
@@ -39,7 +39,7 @@
     "lerna:restrap": "yarn && lerna clean --yes && lerna bootstrap",
     "format": "prettier --write \"packages/**/*.js\"",
     "pretty-quick": "pretty-quick",
-    "test": "jest",
+    "test": "jest --verbose",
     "test:watch": "jest --watch",
     "jsugen": "node packages/jsugen-cli/bin/esm.js",
     "release": "lerna publish --conventional-commits --create-release=github --yes  --conventional-graduate",
